syntax = "proto3";
option java_multiple_files =  true;
option java_package = "com.ssid.grpc";
// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc FindNode (NodeID) returns (stream Node) {}
  }

  // The request message containing the user's name.
  message HelloRequest {
    string name = 1;
  }
  
  // The response message containing the greetings
  message HelloReply {
    string message = 1;
  }

  message NodeID {   
    int32 id = 1;
  }

  message Node {
    int32 id =1;
    string ip_address =2;
    int32 port = 3;
  }

